tests/expected_invalid_permit_generic_argument.diag.out
<input>:4:31: error: permit type 'RenderPassActive' may not appear in function parameter
    public fn submit(passes: List<RenderPassActive>) -> Unit {
                                  ^^^^^^^^^^^^^^^^
